src/test/ui/issues/issue-22434.stderr
error[E0191]: the value of the associated type `A` (from the trait `Foo`) must be specified
  --> $DIR/issue-22434.rs:5:19
   |
LL |     type A;
   |     ------- `A` defined here
...
LL | type I<'a> = &'a (dyn Foo + 'a);
   |                   ^^^^^^^^^^^^ associated type `A` must be specified

error: aborting due to previous error

For more information about this error, try `rustc --explain E0191`.
